--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-            <h2>Open <b>one</b></h2>
+            <h2>Open <b>this</b></h2>
             <div class="tabs">
               <!-- single  -->
               <div class="tab">
