--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 
-            <h2>Open <b>this</b></h2>
+            <h2>Basic <b>Label</b></h2>
             <div class="tabs">
               <!-- single  -->
               <div class="tab">
@@ -49,7 +49,7 @@
                 <label class="tab-label" for="rd1">Must memorize </label>
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='must-vocabulary/pronoun.html'">
-                   <span>Pronoun -  (ضمير)</span>
+                   <span>Pronoun </span>
                    <span>23</span>
                   </div>
                   <div class="box" onclick="window.location.href='must-vocabulary/verbs.html'">
@@ -80,10 +80,10 @@
                                     <div class="box" onclick="window.location.href='practice1/p-indifinite.html'">
 
                                        <span>Present Indefinite </span>
-                                       <span>88</span></div>
+                                       <span>50</span></div>
                   <div class="box" onclick="window.location.href='practice1/f-indifinite.html'">
                                                            <span>future Indefinite </span>
-                                                           <span>88</span>
+                                                           <span>40</span>
                   </div>
                 </div>
                 
