--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div class="col-rt-12">
         <div class="rt-heading">
           <h1>Sure Spoken Learning Academy</h1>
-          </p>
+          <img class="curved" src="assets/images/curve-2.b04970a8.svg" alt="">
+          <br>
         </div>
       </div>
     </div>
@@ -115,11 +116,18 @@
       </div>
     </div>
   </section>
-
-
-  <script src="main.js"></script>
-  <!-- Analytics -->
-
+<footer>
+  <div onclick="window.location.href='https://www.facebook.com/md.kawsar.30'">
+    <img width="30" src="assets/images/fb2.svg" alt="">
+  </div>
+    <div>
+    <img width="30" src="assets/images/whatsapp.svg" alt="">
+  </div>
+  
+    <div>
+    <img width="30" src="assets/images/github.svg" alt="">
+  </div>
+</footer>
 </body>
 
 </html>
