--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div onclick="window.location.href='https://www.facebook.com/md.kawsar.30'">
     <img width="30" src="assets/images/fb2.svg" alt="">
   </div>
-    <div>
+    <div onclick="window.location.href='https://wa.me/+8801762772008'">
     <img width="30" src="assets/images/whatsapp.svg" alt="">
   </div>
   
