--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
           <div class="container">
 
             <!-- START ACCORDION -->
-
+<div class="notice">
+  <div class="title">
+   🔇 <span>Notice</span>
+  </div>
+</div>
 
 
             <h2>Basic <b>Label</b></h2>
