--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pure CSS Responsive Accordion Example</title>
+  <title>sure spoken learning Academy </title>
 
   <meta name="author" content="Codeconvey" />
 
@@ -83,6 +83,11 @@
                     <span>Wh Words</span>
                     <span>22</span>
                   </div>
+                  
+                                    <div class="box" onclick="window.location.href='must-vocabulary/connectors.html'">
+                                      <span>Connectors</span>
+                                      <span>51</span>
+                                    </div>
 
                 </div>
               </div>
