--- a/index.html
+++ b/index.html
@@ -41,15 +41,19 @@
 
 
             <!-- START ACCORDION -->
-            <!--  
+            
 <div class="notice">
   <div class="title">
    🔇 <span>Notice</span>
   </div>
   
-  <p> আমাদের লাইভ ক্লাস ১ তারিখ থেকে শুরু হবে ইনশাল্লাহ</p>
+  <p> ৩ তারিখ রাত ১০ টায় zoom এ্যাপে লাইভ ক্লাশ নেয়া হবে।
+  লাইভ লিংক পরবর্তীতে দেয়া হবে।
+  তার আগে যমীর বা ইংরেজিতে pronouns গুলো এ্যাপ থেকে মুখস্থ করে নিন। যদি সম্ভব হয়।
+  
+  </p>
 </div>
--->
+
 
             <h2>Basic <b>Label</b></h2>
             <div class="tabs">
@@ -59,16 +63,22 @@
                 <label class="tab-label" for="rd1">Must memorize </label>
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='must-vocabulary/pronoun.html'">
-                    <span>Pronoun </span>
+                    <span>Pronoun 
+                    <span class="ar"> 
+                    ضمير</span> </span>
                     <span>23</span>
                   </div>
                   <div class="box" onclick="window.location.href='must-vocabulary/verbs.html'">
 
-                    <span>Verbs</span>
+                    <span>Verbs
+                    <span class="ar">فعل</span>
+                    </span>
                     <span>88</span>
                   </div>
                   <div class="box" onclick="window.location.href='must-vocabulary/preposition.html'">
-                    <span>Preposition</span>
+                    <span>Preposition
+                    <span class="ar">حرف</span>
+                    </span>
                     <span>37</span>
                   </div>
                   <div class="box" onclick="window.location.href='must-vocabulary/adjective.html'">
