--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <!-- single  -->
               <div class="tab">
                 <input type="radio" id="rd1" name="rd">
-                <label class="tab-label" for="rd1">Must memorize </label>
+                <label class="tab-label" for="rd1"> অবশ্যই মুখস্ত করতে হবে </label>
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='must-vocabulary/pronoun.html'">
                     <span>Pronoun 
@@ -104,16 +104,16 @@
               <!-- -->
               <div class="tab">
                 <input type="radio" id="rd2" name="rd">
-                <label class="tab-label" for="rd2">Tense </label>
+                <label class="tab-label" for="rd2">Tense (কাল) </label>
 
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='practice1/p-indifinite.html'">
 
-                    <span>Present Indefinite </span>
+                    <span>Present Indefinite (সাধারণ বর্তমান) </span>
                     <span>50</span>
                   </div>
                   <div class="box" onclick="window.location.href='practice1/f-indifinite.html'">
-                    <span>future Indefinite </span>
+                    <span>future Indefinite ( ভবিষ্যৎ কাল) </span>
                     <span>40</span>
                   </div>
                 </div>
