--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                 <label class="tab-label" for="rd2">Tense (কাল) </label>
 
                 <div class="tab-content">
-                  <div class="box" onclick="window.location.href='practice1/p-indifinite.html'">
+                  <div class="box" onclick="window.location.href='tense/p-indifinite.html'">
 
                     <span>Present Indefinite (সাধারণ বর্তমান) </span>
                     <span>50</span>
                   </div>
-                  <div class="box" onclick="window.location.href='practice1/f-indifinite.html'">
+                  <div class="box" onclick="window.location.href='tense/f-indifinite.html'">
                     <span>future Indefinite ( ভবিষ্যৎ কাল) </span>
                     <span>40</span>
                   </div>
@@ -122,7 +122,26 @@
 
 
               </div>
+              <div class="tab">
+                <input type="radio" id="rd3" name="rd">
+                <label class="tab-label" for="rd3">Class 1 to 10</label>
 
+                <div class="tab-content">
+                  <div class="box" onclick="window.location.href='classs-wise/class-one.html'">
+
+                    <span>Class one </span>
+                    <span>50</span>
+                  </div>
+                  <div class="box" onclick="window.location.href='classs-wise/class-two.html'">
+                    <span>Class two</span>
+                    <span>40</span>
+                  </div>
+                </div>
+
+
+
+
+              </div>
               <!-- single
               <div class="tab">
                 <input type="radio" id="rd3" name="rd">
