--- a/tense/f-indifinite.html
+++ b/tense/f-indifinite.html
@@ -23,7 +23,7 @@
   <script>
     const loader = document.querySelector('.loader')
 
-    fetch('/practice1/json/f-indifinite.json')
+    fetch('json/f-indifinite.json')
       .then(res => res.json())
       .then(data =>
       {
