--- a/tense/p-indifinite.html
+++ b/tense/p-indifinite.html
@@ -23,7 +23,7 @@
   <script>
     const loader = document.querySelector('.loader')
 
-    fetch('/practice1/json/p-indifinite.json')
+    fetch('json/p-indifinite.json')
       .then(res => res.json())
       .then(data =>
       {
