--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   তার আগে যমীর বা ইংরেজিতে pronouns গুলো এ্যাপ থেকে মুখস্থ করে নিন। যদি সম্ভব হয়।
   
   </p>
-  <p>সাপোর্ট:  <a href="meet.google.com/pav-euxs-sdv">জয়েন</a></p>
+  <p>সাপোর্ট:  <a href="http://meet.google.com/pav-euxs-sdv">জয়েন</a></p>
 </div>
 
 
