--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
    🔇 <span>Notice</span>
   </div>
   
-  <p> ৩ তারিখ রাত ১০ টায় zoom এ্যাপে লাইভ ক্লাশ নেয়া হবে।
-  লাইভ লিংক পরবর্তীতে দেয়া হবে।
-  তার আগে যমীর বা ইংরেজিতে pronouns গুলো এ্যাপ থেকে মুখস্থ করে নিন। যদি সম্ভব হয়।
-  
+  <p> লাইভ ক্লাশের সময়: ৩ তারিখ রাত ১০টা
   </p>
-  <p>সাপোর্ট:  <a href="http://meet.google.com/pav-euxs-sdv">জয়েন</a></p>
+  
+  <p>google meet থেকে জয়েন করতে :  <br>  <a href="http://meet.google.com/pav-euxs-sdv"> 👉 এখানে ক্লিক করুন</a></p>
 </div>
 
 
