--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <!-- single  -->
               <div class="tab">
                 <input type="radio" id="rd1" name="rd">
-                <label class="tab-label" for="rd1"> অবশ্যই মুখস্ত করতে হবে </label>
+                <label class="tab-label kalporosh" for="rd1"> অবশ্যই মুখস্ত করতে হবে </label>
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='must-vocabulary/pronoun.html'">
                     <span>Pronoun 
@@ -105,7 +105,7 @@
               <!-- -->
               <div class="tab">
                 <input type="radio" id="rd2" name="rd">
-                <label class="tab-label" for="rd2">Tense (কাল) </label>
+                <label class="tab-label kalporosh" for="rd2">Tense (কাল) </label>
 
                 <div class="tab-content">
                   <div class="box" onclick="window.location.href='tense/p-indifinite.html'">
@@ -150,7 +150,7 @@
               
                             <div class="tab">
                               <input type="radio" id="rd3" name="rd">
-                              <label class="tab-label" for="rd3">প্রতিদিনের ক্লাশের পড়া</label>
+                              <label class="tab-label kalporosh" for="rd3">প্রতিদিনের ক্লাশের পড়া</label>
               
                               <div class="tab-content">
                                 <!--  
@@ -161,7 +161,7 @@
                                 </div>
                        -->
                                 <div class="box" onclick="window.location.href='daily-class/class-two.html'">
-                                  <span>২য় ক্লাশ</span>
+                              <span class="kalporosh">২য় ক্লাশ</span>
                                   <span>69</span>
                                 </div>
                               </div>
