--- a/daily-class/class-two.html
+++ b/daily-class/class-two.html
@@ -47,9 +47,9 @@
     background: slateblue;
     display: inline-block;
     color: #fff;
-    font-size: 30px;
-    height: 40px;
-    width: 40px;
+    font-size: 5vw;
+    height: 8vw;
+    width: 8vw;
     border-radius: 50%;
     font-weight: 800;
     display: flex;
@@ -74,18 +74,18 @@
  }
 main .line div h4:nth-child(1){
   color:yellow;
-  font-size: 20px;
+  font-size: 5vw;
   font-weight: 800;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 main .line div h4:nth-child(2) {
   color: #fff;
-  font-size: 20px;
+  font-size: 5vw;
   font-weight: 800;
 }
 main .line div h4:nth-child(3) {
   color: #fff;
-  font-size: 20px;
+  font-size: 5vw;
   font-weight: 500;
   font-family: kalporosh;
   color: lime;
@@ -95,10 +95,10 @@ main .text{
   font-family: kalporosh;
   padding: 5%;
   font-weight: bold;
-  color: green;
+  color: black;
   text-align: center;
   background: #fff;
-  font-size: 18px !important ;
+  font-size: 4vw !important ;
  
 }
   </style>
