--- a/daily-class/class-two.html
+++ b/daily-class/class-two.html
@@ -36,6 +36,7 @@
       color: yellow;
       background: slateblue;
       text-align: center;
+      font-size: 8vw;
     }
    main .line{
      display: flex;
