--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
 
-              <!-- single
+              <!-- single f
               <div class="tab">
                 <input type="radio" id="rd3" name="rd">
                 <label class="tab-label" for="rd3">Practice 1 </label>
@@ -205,7 +205,7 @@
 -->
               <div class="tab">
                 <input type="radio" id="rd4" name="rd">
-                <label for="rd4" class="tab-close">Close others &times;</label>
+                <label for="rd4" class="tab-close">Close all &times;</label>
               </div>
             </div>
             <!-- END ACCORDION -->
