--- a/classs-wise/class-two.html
+++ b/classs-wise/class-two.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Class two</title>
   <link rel="stylesheet" href="../must-vocabulary/style.css">
+  
+  <style>
+    
+    .box{
+      flex-direction: column-reverse;
+    }
+  </style>
 </head>
 
 <body>
